<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/addressContainer"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:textSize="24sp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/updated_at"
                android:textSize="14sp"
                android:text="@string/updated_at"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/sky_blue"
                    android:hint="@string/enter_city_here"
                    android:textColorHint="@color/white"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:padding="15dp"
                    android:autofillHints="CITY"
                    android:imeOptions="actionSearch"
                    />

<!--                <Button-->
<!--                    android:id="@+id/searchButton"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:text="@string/search"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:padding="10dp"-->
<!--                    android:textAlignment="center"-->
<!--                    android:gravity="center_horizontal"-->
<!--                    android:onClick="searchFun"-->
<!--                    tools:ignore="OnClick"/>-->

<!--                </Button>-->



<!--            <SearchView-->
<!--                android:id="@+id/searchView"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:queryHint="Search CITY Here"-->
<!--                android:iconifiedByDefault="false"-->
<!--                android:background="@color/sky_blue"-->
<!--                />-->

        </LinearLayout>




<!--        <LinearLayout-->
<!--            android:id="@+id/inputText"-->
<!--            android:orientation="vertical"-->
<!--            android:layout_marginTop="100dp"-->
<!--            android:layout_marginLeft="160dp"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content">-->

<!--            -->

<!--            <EditText-->
<!--                android:id="@+id/nameInput"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:hint="@string/city"-->
<!--                android:textColorHint="@color/white"-->
<!--                android:textColor="@color/white"-->
<!--                android:inputType="textPersonName"-->
<!--                android:textAlignment="center"-->
<!--                >-->

<!--            </EditText>-->

<!--        </LinearLayout>-->




        <LinearLayout
            android:id="@+id/overviewContainer"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <TextView
                android:id="@+id/temp"
                android:textSize="50sp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center"
                android:text="@string/_24_u00b0c"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/temp_min"
                    android:text="@string/min_temp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>
                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content">
                </Space>
                <TextView
                    android:id="@+id/temp_max"
                    android:text="@string/max_temp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailsContainer"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/sky_blue"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrise">

                    </ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sun_rise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_5_30am"
                        android:textColor="@color/white"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/sky_blue"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunset">

                    </ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/sun_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_6_00pm"
                        android:textColor="@color/white"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/sky_blue"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/wind">

                    </ImageView>

                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="12sp">

                    </TextView>

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_28"
                        android:textColor="@color/white"
                        android:textSize="14sp">

                    </TextView>
                </LinearLayout>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp">

            </Space>
            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/sky_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/pressure">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/pressure"
                        android:textSize="14sp"
                        android:text="@string/_1006"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/sky_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humidity">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/humidity"
                        android:textSize="14sp"
                        android:text="@string/_60"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="@color/sky_blue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/info">

                    </ImageView>
                    <Space
                        android:layout_width="5dp"
                        android:layout_height="wrap_content">

                    </Space>
                    <TextView
                        android:textSize="12sp"
                        android:text="@string/created_by"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                    <TextView
                        android:id="@+id/sunrise"
                        android:textSize="14sp"
                        android:text="@string/brinda"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>
                </LinearLayout>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content">

                </Space>

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_centerInParent="true"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>

</RelativeLayout>